mooselect.temp.css
.MooSelect-container {
  position:relative;
  display:inline-block;
  vertical-align:top;
}

.MooSelect-container.single .MooSelect-stage {
  background-color: #fff;
  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eeeeee), color-stop(0.5, white));
  background-image: -webkit-linear-gradient(center bottom, #eeeeee 0%, white 50%);
  background-image: -moz-linear-gradient(center bottom, #eeeeee 0%, white 50%);
  background-image: -o-linear-gradient(top, #eeeeee 0%,#ffffff 50%);
  background-image: -ms-linear-gradient(top, #eeeeee 0%,#ffffff 50%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#ffffff',GradientType=0 );
  background-image: linear-gradient(top, #eeeeee 0%,#ffffff 50%);
  display: block;
  overflow: hidden;
  white-space: nowrap;
  position: relative;
  padding:5px 20px 5px 5px;
  color: #444;
  cursor:pointer;
  text-decoration: none;
  position:relative;
}

.MooSelect-contaner.single .MooSelect-stage-result {
  position:relative;
  padding-left:10px;
}

.MooSelect-container.single .MooSelect-stage-result .MooSelect-x {
  right:30px;
  top:10px;
}

.MooSelect-stage,
.MooSelect-inner {
  border: 1px solid #aaa;
}

.MooSelect-container.single .MooSelect-stage,
.MooSelect-inner.single {
  border-radius : 4px;
  -moz-border-radius : 4px;
  -webkit-border-radius : 4px;
}

.MooSelect-inner.single .MooSelect-searcher {
  margin:0 5px 8px;
}

.MooSelect-inner.single .MooSelect-searcher,
.MooSelect-container.multiple .MooSelect-stage  {
  background:#ffffff;
  background:-webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
  background:-webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);  
  background:-moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
  background:-o-linear-gradient(bottom, white 85%, #eeeeee 99%);
  background:-ms-linear-gradient(top, #ffffff 85%,#eeeeee 99%);
  background:-ms-linear-gradient(top, #ffffff 85%,#eeeeee 99%);
  background:linear-gradient(top, #ffffff 85%,#eeeeee 99%);
  padding: 4px 5px;
  border:1px solid #bbb;
  position:relative;
}

.MooSelect-container.multiple.open .MooSelect-search-icon,
.MooSelect-inner.single.open .MooSelect-searcher .MooSelect-search-icon {
  background:url('sprite.png') no-repeat -38px -20px;
  width:20px;
  height:20px;
  position:absolute;
  top:50%;
  margin-top:-12px;
  right:8px;
}

.MooSelect-searcher input {
  width:99%;
  line-height:100%;
  border:0;
  font-size:80%;
}

.MooSelect-searcher input:focus {
  outline:0;
}

.MooSelect-inner .MooSelect-results {
  overflow:auto;
}

.MooSelect-inner .MooSelect-result {
  padding:4px;
  cursor:pointer;
}

.MooSelect-inner .MooSelect-result.grouped {
  padding-left:20px;
}

.MooSelect-inner .MooSelect-group {
  font-weight:bold;
  padding:3px;
  color:#999;
}

.MooSelect-inner .MooSelect-result:hover,
.MooSelect-inner .MooSelect-result.hover {
  background:blue;
  color:white;
}

.MooSelect-inner.open {
  position:absolute;
  left:0;
  right:0;
  padding-top:5px;
  background:white;
  -webkit-border-top-right-radius: 0px;
  -webkit-border-top-left-radius: 0px;
  -moz-border-top-right-radius   : 0px;
  -moz-border-top-left-radius   : 0px;
  border-top-left-radius        : 0px;
  border-top-right-radius        : 0;
  border-top:0;
  -webkit-box-shadow: 0 4px 5px rgba(0,0,0,.15);
  -moz-box-shadow   : 0 4px 5px rgba(0,0,0,.15);
  -o-box-shadow     : 0 4px 5px rgba(0,0,0,.15);
  box-shadow        : 0 4px 5px rgba(0,0,0,.15);
}

.MooSelect-container.single.open .MooSelect-stage {
  border-bottom-right-radius:0;
  -moz-border-bottom-right-radius:0;
  -webkit-border-bottom-right-radius:0;
  border-bottom-left-radius:0;
  -moz-border-bottom-left-radius:0;
  -webkit-border-bottom-left-radius:0;
  border-bottom:0;
}

.MooSelect-container.single.open .MooSelect-stage {
  background-color: #eee;
  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, white), color-stop(0.5, #eeeeee));
  background-image: -webkit-linear-gradient(center bottom, white 0%, #eeeeee 50%);
  background-image: -moz-linear-gradient(center bottom, white 0%, #eeeeee 50%);
  background-image: -o-linear-gradient(bottom, white 0%, #eeeeee 50%);
  background-image: -ms-linear-gradient(top, #ffffff 0%,#eeeeee 50%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eeeeee',GradientType=0 );
  background-image: linear-gradient(top, #ffffff 0%,#eeeeee 50%);
}

.MooSelect-container.single .MooSelect-arrow-background {
  border-radius        : 0 4px 4px 0;
  -moz-border-radius        : 0 4px 4px 0;
  -webkit-border-radius        : 0 4px 4px 0;
  background: #ccc;
  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #ccc), color-stop(0.6, #eee));
  background-image: -webkit-linear-gradient(center bottom, #ccc 0%, #eee 60%);
  background-image: -moz-linear-gradient(center bottom, #ccc 0%, #eee 60%);
  background-image: -o-linear-gradient(bottom, #ccc 0%, #eee 60%);
  background-image: -ms-linear-gradient(top, #cccccc 0%,#eeeeee 60%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#eeeeee',GradientType=0 );
  background-image: linear-gradient(top, #cccccc 0%,#eeeeee 60%);
  border-left: 1px solid #aaa;
  position: absolute;
  right: 0;
  top: 0;
  display: block;
  height: 100%;
  width: 18px;
}

.MooSelect-container.single .MooSelect-arrow {
  position: absolute;
  right: 0;
  top: 0;
  display: block;
  height: 100%;
  width: 18px;
  background: url('sprite.png') no-repeat 0 1px;
}

.MooSelect-container.open .MooSelect-arrow {
  background-position: -18px 1px;
}

.MooSelect-container.open .MooSelect-arrow-background {
  border-left-width:0;
  background:none;
}

.MooSelect-container.multiple .MooSelect-arrow-background {
  display:none;
}

.MooSelect-container.multiple .MooSelect-searcher input {
  border:0;
  padding:0;
  margin-top:-1px;
  background:none;
}

.MooSelect-container.hover,
.MooSelect-container.closed {
  cursor:pointer;
}

.MooSelect-container.hover .MooSelect-stage,
.MooSelect-container.multiple.open .MooSelect-stage,
.MooSelect-container.closed .MooSelect-stage:hover {
  box-shadow:0 0 3px #999;
  -o-box-shadow:0 0 3px #999;
  -moz-box-shadow:0 0 3px #999;
  -webkit-box-shadow:0 0 3px #999;
  border-color:#5897FB;
}

.MooSelect-container.multiple .MooSelect-searcher,
.MooSelect-container.multiple .MooSelect-stage-result {
  -webkit-border-radius: 3px;
  -moz-border-radius   : 3px;
  border-radius        : 3px;
  background-color: #e4e4e4;
  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #e4e4e4), color-stop(0.7, #eeeeee));
  background-image: -webkit-linear-gradient(center bottom, #e4e4e4 0%, #eeeeee 70%);
  background-image: -moz-linear-gradient(center bottom, #e4e4e4 0%, #eeeeee 70%);
  background-image: -o-linear-gradient(bottom, #e4e4e4 0%, #eeeeee 70%);
  background-image: -ms-linear-gradient(top, #e4e4e4 0%,#eeeeee 70%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e4e4e4', endColorstr='#eeeeee',GradientType=0 );
  background-image: linear-gradient(top, #e4e4e4 0%,#eeeeee 70%);
  color: #333;
  border: 1px solid #b4b4b4;
  line-height: 13px;
  padding: 3px 19px 3px 6px;
  margin: 3px 0 3px 5px;
  float:left;
}

.MooSelect-container.multiple .MooSelect-searcher {
  border:0;
  background:none;
}

.MooSelect-container.multiple .MooSelect-stage-result {
  position:relative;
  padding-right:20px;
  box-shadow:0 0 3px #ddd;
  -o-box-shadow:0 0 3px #ddd;
  -moz-box-shadow:0 0 3px #ddd;
  -webkit-box-shadow:0 0 3px #ddd;
}

.MooSelect-container .MooSelect-stage-result .MooSelect-x {
  display: block;
  position: absolute;
  right: 5px;
  top: 5px;
  width: 12px;
  height: 8px;
  font-size: 1px;
  background: url(sprite.png) right top no-repeat;
}

.MooSelect-container.multiple .MooSelect-stage-result .MooSelect-x:hover {
  background-position: right -5px;
}

.MooSelect-container .MooSelect-stage {
  overflow:auto;
  min-height:20px;
}

.MooSelect-container.multiple .MooSelect-searcher {
  float:left;
}

.MooSelect-container .MooSelect-stage-result.active {
  background: #d4d4d4;
}

.MooSelect-message { 
  font-size:15px;
  padding:5px;
}

.MooSelect-message-empty {
  color:#999;
}

.MooSelect-container.validation-failed .MooSelect-stage {
  color:red;
  background:pink;
}

.MooSelect-container .MooSelect-placeholder {
  color:#999;
  position:absolute;
  top:5px;
  left:5px;
}

